<resources>
    <string name="app_name">Orbital-Lwp</string>
    <string name="main_config">Welcome, to begin using Orbital LWP you will need to configure your wallpaper settings. Select the option to set live wallpaper and then select "Orbital LWP".</string>
    <string name="main_settings">Now you can configure the behaviour of Orbital LWP. The settings can be accessed using the Android live wallpaper settings menu or the button below.</string>
    <string name="main_others">Other PuZZleDucK apps on the Play store.</string>
    <string name="main_src">Take a look at the source code for Orbitals LWP.</string>
    <string name="main_email">Contact the developer.</string>
    <string name="button_email">Contact PuZZleDucK</string>
    <string name="button_src">Orbital LWP on GitHub</string>
    <string name="button_others">PuZZleDucK on Play</string>
    <string name="button_settings">Orbital Settings</string>
    <string name="button_config">Configure wallpaper</string>

    <string name="action_settings">Settings</string>

    <string name="pref_syncConnectionTypes_default">Chasing</string>
    <string name="settings_title">settings_title</string>
    <string name="orbit_category">Orbit Preferences</string>
    <string name="orbit_category_summary">Orbit Preferences summary</string>
    <string name="orbit_type">ListPreference title</string>
    <string name="orbit_type_summary">ListPreference summary</string>
    <string name="orbit_speed">speed selector title</string>
    <string name="orbit_speed_summary">speed summary</string>
    <string name="orbit_direction">direction selector title</string>
    <string name="orbit_direction_summary">direction summary</string>
    <string name="dot_category">Dot Preferences</string>
    <string name="dot_category_summary">Dot Preferences summary</string>
    <string name="dot_color">color selector title</string>
    <string name="dot_color_summary">color summary</string>
    <string name="dot_size">size selector title</string>
    <string name="dot_size_summary">size summary</string>
    <string name="dot_count">count selector title</string>
    <string name="dot_count_summary">count summary</string>
    <string name="transition_category">Transition Preferences</string>
    <string name="transition_category_summary">Transition Preferences summary</string>
    <string name="transition_types">transition selector title</string>
    <string name="transition_types_summary">transition summary</string>
    <string name="transition_speeds">transition speed selector title</string>
    <string name="transition_speeds_summary">transition speed summary</string>


    <string name="feedback_email">puzzleduck+orbitalLWP@gmail.com</string>
    <string name="feedback_email_subject">"User feedback for Orbital Live Wallpaper: "</string>
    <string name="feedback_pick_email_prompt">Thank you for your feedback, please select an app:</string>
    <string name="search_apps_uri">market://search?q=PuZZleDucK Industries</string>
    <string name="source_url">https://github.com/PuZZleDucK/Orbital-Live-Wallpaper</string>



</resources>
