<?xml version="1.0" encoding="utf-8"?>
<!-- /*
 * Orbital Live Wallpaper
 *
 * Copyright (C) 2012 PuZZleDucK (PuZZleDucK@gmail.com)
 * 
 *	This program is free software; you can redistribute it and/or
 *	modify it under the terms of the GNU General Public License version
 *	3 as published by the Free Software Foundation.
 *
 * This live wallpaper was originally based on the target live wallpaper by PuZZleDucK
 *
 */ -->

<PreferenceScreen 
    android:key="orbital_wallpaper_settings" 
    android:title="@string/settings_title"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory 
        android:key="orbit_category"
        android:title="@string/orbit_category"
        android:summary="@string/orbit_category_summary">



        <ListPreference
            android:key="orbit_type"
            android:title="@string/orbit_type"
            android:summary="@string/orbit_type_summary"
            android:entries="@array/orbit_types"
            android:entryValues="@array/orbit_types_values" />


        <ListPreference
            android:key="orbit_speed"
            android:title="@string/orbit_speed"
            android:summary="@string/orbit_speed_summary"
            android:entries="@array/speed_types"
            android:entryValues="@array/speed_types_values"
            android:defaultValue="Random" />

        <ListPreference
            android:key="orbit_direction"
            android:title="@string/orbit_direction"
            android:summary="@string/orbit_direction_summary"
            android:entries="@array/direction_types"
            android:entryValues="@array/direction_types_values"
            android:defaultValue="Random" />

    </PreferenceCategory>



    <PreferenceCategory
        android:key="dot_category"
        android:title="@string/dot_category"
        android:summary="@string/dot_category_summary">


        <ListPreference
            android:key="dot_color"
            android:title="@string/dot_color"
            android:summary="@string/dot_color_summary"
            android:entries="@array/color_types"
            android:entryValues="@array/color_types_values"
            android:defaultValue="Random" />


        <ListPreference
            android:key="dot_size"
            android:title="@string/dot_size"
            android:summary="@string/dot_size_summary"
            android:entries="@array/size_types"
            android:entryValues="@array/size_types_values"
            android:defaultValue="Random" />

        <ListPreference
            android:key="dot_count"
            android:title="@string/dot_count"
            android:summary="@string/dot_count_summary"
            android:entries="@array/count_types"
            android:entryValues="@array/count_types_values"
            android:defaultValue="Random" />

    </PreferenceCategory>




    <PreferenceCategory
        android:key="transition_category"
        android:title="@string/transition_category"
        android:summary="@string/transition_category_summary">

        <ListPreference
            android:key="transition_types"
            android:title="@string/transition_types"
            android:summary="@string/transition_types_summary"
            android:entries="@array/transition_types"
            android:entryValues="@array/transition_types_values"
            android:defaultValue="Random" />

        <ListPreference
            android:key="transition_speeds"
            android:title="@string/transition_speeds"
            android:summary="@string/transition_speeds_summary"
            android:entries="@array/transition_speed_types"
            android:entryValues="@array/transition_speed_types_values"
            android:defaultValue="Random" />

    </PreferenceCategory>


    <!--
    <ListPreference android:entries="@array/target_animatenames" android:entryValues="@array/target_animatevalues" android:key="target_disc_type" android:title="@string/target_settings_disctype_title" android:summary="@string/target_settings_disctype_summary"></ListPreference>
     -->


    
</PreferenceScreen>
