<?xml version="1.0" encoding="utf-8"?>
<!-- /*
 * Orbital Live Wallpaper
 *
 * Copyright (C) 2012 PuZZleDucK (PuZZleDucK@gmail.com)
 * 
 *	This program is free software; you can redistribute it and/or
 *	modify it under the terms of the GNU General Public License version
 *	3 as published by the Free Software Foundation.
 *
 * This live wallpaper was originally based on the target live wallpaper by PuZZleDucK
 *
 */ -->
 
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >



        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_config"
        android:textSize="12sp"
        android:id="@+id/main_config" />
    <Button
        android:id="@+id/configWallpaperButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/button_config" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_settings"
        android:textSize="12sp"
        android:id="@+id/main_settings" />
    <Button
        android:id="@+id/configOrbitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/button_settings" />





    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/main_others"
    android:textSize="12sp"
    android:id="@+id/main_others" />
<Button
    android:id="@+id/appsButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:text="@string/button_others" />


<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/main_src"
    android:textSize="12sp"
    android:id="@+id/main_src" />
<Button
    android:id="@+id/githubButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:text="@string/button_src" />



<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/main_email"
    android:textSize="12sp"
    android:id="@+id/main_email" />
<Button
    android:id="@+id/contactDevButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:text="@string/button_email" />



</LinearLayout>